--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/auth0-js": "^9.14.7",
 		"prisma": "^4.15.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
@@ -22,6 +23,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^4.15.0"
+		"@prisma/client": "^4.15.0",
+		"auth0-js": "^9.21.0"
 	}
 }
