--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/auth0": "^3.3.3",
 		"@types/auth0-js": "^9.14.7",
 		"prisma": "^4.15.0",
 		"svelte": "^3.54.0",
@@ -24,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.15.0",
+		"auth0": "^3.4.0",
 		"auth0-js": "^9.21.0"
 	}
 }
