--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@types/auth0": "^3.3.3",
     "@types/auth0-js": "^9.14.7",
     "@types/node": "^20.2.6",
+    "bulma": "^0.9.4",
     "prisma": "^4.15.0",
+    "sass": "^1.62.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
-    "sass": "^1.62.0",
-    "svelte-preprocess": "^5.0.3",
-    "bulma": "^0.9.4"
+    "vite": "^4.3.0"
   },
   "type": "module",
   "dependencies": {
